welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:20: error: not found: value estFAceMur
    if (estFAceMur()) {
        ^